{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 13,
  "lineage": "a716d705-3a46-930e-9bd1-79cf50d396dc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-21T06:47:10.181-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-21T06:47:09.770-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-https",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-21T06:47:10.255-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-one",
            "log_config": [],
            "name": "allow-one",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-one",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-one"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "999"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-21T06:47:10.204-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mihai-test-341609/global/firewalls/allow-two",
            "log_config": [],
            "name": "allow-two",
            "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
            "priority": 1000,
            "project": "mihai-test-341609",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/firewalls/allow-two",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-two"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-7-v20220519",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/zones/europe-west1-b/disks/list-name1-name2-name3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "enable_display": false,
            "id": "projects/mihai-test-341609/zones/europe-west1-b/instances/list-name1-name2-name3",
            "instance_id": "2359288520249209513",
            "label_fingerprint": "8ZKEOOQ7eHI=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "list-1"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "33rWEBo7VxI=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "list-name1-name2-name3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/global/networks/default",
                "network_ip": "10.132.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "mihai-test-341609"
              }
            ],
            "project": "mihai-test-341609",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mihai-test-341609/zones/europe-west1-b/instances/list-name1-name2-name3",
            "service_account": [
              {
                "email": "940365574844-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https",
              "allow-one",
              "allow-two"
            ],
            "tags_fingerprint": "5INV81t7UCA=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}